<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/progressuplogo"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/welcomeText"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/createPlanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/createPlan" />

            <Button
                android:id="@+id/myPlanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/myPlan" />

            <Button
                android:id="@+id/addPlanMonitorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/addPlanMonitor" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/history" />

            <Button
                android:id="@+id/howToFitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/howToFit" />

            <Button
                android:id="@+id/statsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/stats" />

            <Button
                android:id="@+id/toUsersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/toUsers" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:background="@drawable/radius_button"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>